2023/10/27 파이널 프로젝트 테스트 ( jsp+css )

--- a/FinalProject/src/main/webapp/resources/css/style.css
+++ b/FinalProject/src/main/webapp/resources/css/style.css
@@ -26,7 +26,8 @@ body{ font-family : 나눔고딕;
 .navi_box{
     float:clear; 
 	width:300px; height:1000px;	
-	background:yellow;
+	background:#ddd;
+	
 }
 
 .navi_box > ul{
