--- a/FinalProject/src/main/webapp/resources/css/style.css
+++ b/FinalProject/src/main/webapp/resources/css/style.css
@@ -111,3 +111,76 @@ body {
 	font-weight: bold;
 	transition: all 1s;
 }
+
+/* 버튼 스타일 CSS */
+.topproducimg1 {
+	width: 45px;
+	height: 45px;
+	display: inline-block;
+	margin-right: -32px;
+	padding-top: 15px;
+}
+
+.topproducimg2 {
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+	margin-right: -40px;
+	padding-top: 8px;
+}
+
+.snip1535 {
+	background-color: #F2FBEF;
+	border: none;
+	color: #01DF3A;
+	cursor: pointer;
+	display: inline-block;
+	font-family: 'BenchNine', Arial, sans-serif;
+	font-size: 1em;
+	font-size: 18px;
+	line-height: 1em;
+	margin: 15px 40px;
+	outline: none;
+	padding: 12px 40px 10px;
+	position: relative;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.snip1535:before, .snip1535:after {
+	border-color: transparent;
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+	border-style: solid;
+	border-width: 0;
+	content: "";
+	height: 24px;
+	position: absolute;
+	width: 24px;
+}
+
+.snip1535:before {
+	border-color: #01DF3A;
+	border-right-width: 2px;
+	border-top-width: 2px;
+	right: -5px;
+	top: -5px;
+}
+
+.snip1535:after {
+	border-bottom-width: 2px;
+	border-color: #01DF3A;
+	border-left-width: 2px;
+	bottom: -5px;
+	left: -5px;
+}
+
+.snip1535:hover, .snip1535.hover {
+	background-color: #0174DF;
+}
+
+.snip1535:hover:before, .snip1535.hover:before, .snip1535:hover:after,
+	.snip1535.hover:after {
+	height: 100%;
+	width: 100%;
+}
