2023//11//06//프로덕트 수정

--- a/FinalProject/src/main/webapp/resources/css/style.css
+++ b/FinalProject/src/main/webapp/resources/css/style.css
@@ -137,6 +137,14 @@ body {
 	padding-top: 8px;
 }
 
+.topproducimg3 {
+/* 	width: 60px; */
+	height: 60px;
+/* 	display: inline-block; */
+	margin-right: 50px;
+	padding-top: 8px;
+}
+
 .snip1535 {
 	background-color: #F2FBEF;
 	border: none;
