--- a/FinalProject/src/main/webapp/resources/css/headerandfooter.css
+++ b/FinalProject/src/main/webapp/resources/css/headerandfooter.css
@@ -38,7 +38,7 @@ body, button, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, input, legend,
 
 body, button, input, select, table, textarea {
   font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", "돋움", dotum, "굴림", gulim, Arial, sans-serif, "Apple SD Gothic Neo";
-  font-size: 13px;
+  font-size: 15px;
   letter-spacing: -0.2px;
 }
 
@@ -53,7 +53,13 @@ textarea {
   border: 0;
   word-break: keep-all;
   word-wrap: break-word;
+  background-color: white;
+   width: 100%;
+   height: 500px;
+   border-radius: 7px;
 }
+
+
 
 button, input {
   border-radius: 0;
@@ -108,6 +114,8 @@ i {
 
 input[type=text], input[type=search], textarea {
   outline: 0;
+  width: 100%;
+  height: 35px;
 }
 
 .blind {
