--- a/FinalProject/src/main/webapp/resources/css/table.css
+++ b/FinalProject/src/main/webapp/resources/css/table.css
@@ -28,6 +28,18 @@ table th {
 	border-radius: 5px;
 }
 
+.contentnew {
+	backface-visibility: hidden;
+  background-color: transparent;
+  border: 0;
+  word-break: keep-all;
+  word-wrap: break-word;
+  background-color: white;
+   width: 100%;
+   height: 250px;
+   border-radius: 7px;
+}
+
 img {
 	width: 90px;
 	height: 90px;
